Fixed the overflowing images in the text widget

--- a/assets/public/css/style.css
+++ b/assets/public/css/style.css
@@ -12939,6 +12939,8 @@ p, small {
   width: 100%;
   max-width: 100%;
   display: block; }
+  .textwidget img {
+    max-width: 100%; }
 
 .tagcloud {
   display: flex;
