--- a/assets/public/scss/widget.scss
+++ b/assets/public/scss/widget.scss
@@ -76,6 +76,10 @@
   width: 100%;
   max-width: 100%;
   display: block;
+
+  img {
+    max-width: 100%;
+  }
 }
 
 .tagcloud {
